tests/ParserTests/Good/Good08.hpr
module A where
import B.C
import D.E
