tests/ParserTests/Bad/Bad05.hpr
module A where
import B.c
